Perform window mouse action for tablet tool buttons

Perform the actions for middle/right click

BUG: 480227